--- a/src/main/resources/com/vorofpie/teamcraft/fxml/programmers-tab.fxml
+++ b/src/main/resources/com/vorofpie/teamcraft/fxml/programmers-tab.fxml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
 
-<TableView fx:id="programmersTable" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vorofpie.teamcraft.controller.ProgrammerController">
-    <columns>
-        <TableColumn fx:id="nameColumn" text="Имя" />
-        <TableColumn fx:id="emailColumn" text="Email" />
-        <TableColumn fx:id="experienceYearsColumn" text="Опыт (лет)" />
-        <TableColumn fx:id="educationColumn" text="Образование" />
-        <TableColumn fx:id="companyColumn" text="Компания" />
-    </columns>
-</TableView>
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vorofpie.teamcraft.controller.ProgrammerController">
+    <!-- Заголовок -->
+    <Label text="Список программистов" style="-fx-font-size: 20px; -fx-padding: 10px;"/>
+
+    <!-- Таблица для отображения программистов -->
+    <TableView fx:id="programmersTable">
+        <columns>
+            <TableColumn fx:id="nameColumn" text="Имя" />
+            <TableColumn fx:id="emailColumn" text="Email" />
+            <TableColumn fx:id="experienceYearsColumn" text="Опыт (лет)" />
+            <TableColumn fx:id="educationColumn" text="Образование" />
+            <TableColumn fx:id="companyColumn" text="Компания" />
+            <!-- Добавляем колонку для навыков -->
+            <TableColumn fx:id="skillsColumn" text="Навыки" />
+        </columns>
+    </TableView>
+
+
+    <!-- Кнопка для добавления программиста -->
+    <Button fx:id="addProgrammerButton" text="Добавить программиста" onAction="#handleAddProgrammer" style="-fx-padding: 10px; -fx-margin-top: 10px;" />
+</VBox>
