--- a/src/main/resources/com/vorofpie/teamcraft/fxml/technologies-tab.fxml
+++ b/src/main/resources/com/vorofpie/teamcraft/fxml/technologies-tab.fxml
@@ -8,7 +8,19 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.vorofpie.teamcraft.fxml.TechnologiesTab"
+            fx:controller="com.vorofpie.teamcraft.controller.TechnologiesController"
             prefHeight="400.0" prefWidth="600.0">
 
+    <TableView fx:id="technologiesTable" layoutX="20.0" layoutY="20.0" prefWidth="560.0" prefHeight="360.0">
+        <columns>
+            <TableColumn text="ID" fx:id="idColumn" prefWidth="50.0"/>
+            <TableColumn text="Название" fx:id="nameColumn" prefWidth="150.0"/>
+            <TableColumn text="Категория" fx:id="categoryColumn" prefWidth="150.0"/>
+            <TableColumn text="Рейтинг" fx:id="ratingColumn" prefWidth="100.0"/>
+            <TableColumn text="Обязательная" fx:id="isRequiredColumn" prefWidth="100.0"/>
+        </columns>
+    </TableView>
+
+    <Button text="Добавить технологию" layoutX="20.0" layoutY="390.0" onAction="#handleAddTechnology"/>
 </AnchorPane>
+
