--- a/src/main/resources/com/vorofpie/teamcraft/fxml/projects-tab.fxml
+++ b/src/main/resources/com/vorofpie/teamcraft/fxml/projects-tab.fxml
@@ -6,7 +6,7 @@
 <AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.vorofpie.teamcraft.controller.ProjectController"
             prefHeight="400.0" prefWidth="600.0">
 
-    <Label text="Проект:" layoutX="20.0" layoutY="60.0"/>
+    <Label text="Проект:" layoutX="20.0"/>
     <ComboBox fx:id="projectComboBox" layoutX="20.0" layoutY="20.0" prefWidth="200.0"
               onAction="#handleProjectSelection">
         <items>
